2019-1/231/users/4228/executions/1611_820.log
== TEST (2019-04-02 03:21:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 03:22:04) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_RS50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 11
    resto_R$50 = valor % 50
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 03:22:32) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_RS50

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS50 = valor % 50

# Quantidade de notas de R$ 10
notas_RS10 = resto_RS50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS10 = resto_RS50 % 10

# Quantidade de notas de R$ 2
notas_RS2 = resto_RS10 // 2

print(int(notas_RS50))
print(int(notas_RS10))
print(int(notas_RS2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_RS50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 03:25:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto_50 = valor%50

# Quantidade de notas de R$ 10
notas_10 = resto_50//10

# Valor restante a ser sacado com notas menores que R$ 50
resto_10 = resto_50%10

# Quantidade de notas de R$ 2
notas_2 = resto_10//2

print (int(notas_50))
print (int(notas_10))
print (int(notas_2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    notas_50 = valor//50
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 03:26:17) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_50 = valor % 50

# Quantidade de notas de R$ 10
notas_10 = resto_50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_10 = resto_50 % 10

# Quantidade de notas de R$ 2
notas_2 = resto_10 // 2

print (int(notas_50))
print (int(notas_10))
print (int(notas_2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    notas_50 = valor // 50
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 03:26:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_50 = valor % 50

# Quantidade de notas de R$ 10
notas_10 = resto_50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_10 = resto_50 % 10

# Quantidade de notas de R$ 2
notas_2 = resto_10 // 2

print (int(notas_50))
print (int(notas_10))
print (int(notas_2))

-- ERROR:
File "XXXX", line 8
    notas_50 = valor // 50
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 03:26:43) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_50 = valor % 50

# Quantidade de notas de R$ 10
notas_10 = resto_50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_10 = resto_50 % 10

# Quantidade de notas de R$ 2
notas_2 = resto_10 // 2

print (int(notas_50))
print (int(notas_10))
print (int(notas_2))

-- ERROR:
File "XXXX", line 8
    notas_50 = valor // 50
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 03:26:45) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_50 = valor % 50

# Quantidade de notas de R$ 10
notas_10 = resto_50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_10 = resto_50 % 10

# Quantidade de notas de R$ 2
notas_2 = resto_10 // 2

print (int(notas_50))
print (int(notas_10))
print (int(notas_2))

-- ERROR:
File "XXXX", line 8
    notas_50 = valor // 50
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 03:27:29) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
n50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
r50 = valor % 50

# Quantidade de notas de R$ 10
n10 = resto_50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
r10 = resto_50 % 10

# Quantidade de notas de R$ 2
n2 = resto_10 // 2

print (int(notas_50))
print (int(notas_10))
print (int(notas_2))

-- ERROR:
File "XXXX", line 8
    n50 = valor // 50
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 03:27:39) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
n50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
r50 = valor % 50

# Quantidade de notas de R$ 10
n10 = resto_50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
r10 = resto_50 % 10

# Quantidade de notas de R$ 2
n2 = resto_10 // 2

print (int(notas_50))
print (int(notas_10))
print (int(notas_2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    n10 = resto_50 // 10
NameError: name 'resto_50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 03:28:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
n50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
r50 = valor % 50

# Quantidade de notas de R$ 10
n10 = r50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
r10 = r50 % 10

# Quantidade de notas de R$ 2
n2 = r10 // 2

print (int(notas_50))
print (int(notas_10))
print (int(notas_2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 22, in <module>
    print (int(notas_50))
NameError: name 'notas_50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 03:28:16) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
n50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
r50 = valor % 50

# Quantidade de notas de R$ 10
n10 = r50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
r10 = r50 % 10

# Quantidade de notas de R$ 2
n2 = r10 // 2

print (int(n50))
print (int(n10))
print (int(n2))

-- EXECUTION TIME:
0.206841
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 03:28:17) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
n50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
r50 = valor % 50

# Quantidade de notas de R$ 10
n10 = r50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
r10 = r50 % 10

# Quantidade de notas de R$ 2
n2 = r10 // 2

print (int(n50))
print (int(n10))
print (int(n2))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
